grammar.js
		source_file: ($) => repeat($.item_with_docs),

		item_with_docs: ($) => seq(optional($.doc_comment), $._item),

		_item: ($) =>
			choice(
				$.host_definition,
				$.macro_definition,
				$.function_definition,
				$.impl_block,
				$.extend_type_definition,
				$.type_definition,
				$.enum_definition,
				$.contract_definition,
				$.test_definition,
				$.attribute_declaration,
				$.inline_module,
				$.module_declaration,
				$.use_declaration,
			),

		identifier: (_) => {
			const word = /[a-zA-Z_][a-zA-Z0-9_]*/;
			return token(prec(-1, word));
		},

		_type: ($) =>
			choice(
				$.arrow_function_type,
				$.function_type,
				$.type_reference,
				$.array_type,
				$._type_name,
			),

		type_path: ($) => $._type_path,

		_type_path: ($) => sep1($._type_path_segment, "."),

		primitive_type: (_) =>
			choice("bool", "i32", "i64", "u8", "f64", "char", "string", "unit"),

		_expression: ($) =>
			choice($.lambda_expression, $.match_expression, $.assignment_expression),

		assignment_expression: ($) =>
			choice(
				$.logical_or_expression,
				prec.right(
					PREC.assignment,
					seq(
						field("left", $.logical_or_expression),
						field("operator", choice("=", "+=", "-=")),
						field("right", $.assignment_expression),
					),
				),
			),

		logical_or_expression: ($) =>
			prec.left(PREC.logical_or, sep1($.logical_and_expression, "||")),
		logical_and_expression: ($) =>
			prec.left(PREC.logical_and, sep1($.equality_expression, "&&")),
		equality_expression: ($) =>
			prec.left(
				PREC.equality,
				sep1($.comparison_expression, choice("===", "!==", "==", "!=")),
			),
		comparison_expression: ($) =>
			prec.left(
				PREC.comparison,
				sep1($.additive_expression, choice("<=", ">=", "<", ">")),
			),
		additive_expression: ($) =>
			prec.left(
				PREC.additive,
				sep1($.multiplication_expression, choice("+", "-")),
			),
		multiplication_expression: ($) =>
			prec.left(PREC.multiplicative, sep1($.unary_expression, choice("*", "/"))),

		unary_expression: ($) =>
			choice(
				$.spawn_expression,
				prec(
					PREC.unary,
					seq(repeat(choice("-", "!")), field("operand", $.postfix_expression)),
				),
			),

		postfix_expression: ($) =>
			prec(
				PREC.postfix,
				seq(
					field("operand", $.primary_expression),
					repeat(choice($.call_suffix, $.member_access, $.try_operator)),
				),
			),

		call_suffix: ($) => seq("(", optional($.argument_list), ")"),
		member_access: ($) => seq(".", field("member", $.identifier)),
		primary_expression: ($) =>
			choice(
				$.literal,
				$.macro_invocation,
				$.macro_metavariable,
				$._enum_constructor_expression,
				$.struct_literal_expression,
				$.range_expression,
				$.identifier,
				$.parenthesized_expression,
				$.block,
			),

		_enum_constructor_expression: ($) =>
			seq(
				field("path", $.enum_path),
				optional(seq("(", optional($.argument_list), ")")),
			),

		struct_literal_expression: ($) =>
			prec(
				PREC.primary,
				seq(field("type", $._type_path), "{", optional($.field_value_list), "}"),
			),

		visibility: (_) => "pub",

		module_declaration: ($) =>
			seq(
				optional($.attribute_list),
				optional($.visibility),
				"mod",
				field("name", $._type_path),
				";",
			),

		use_declaration: ($) =>
			seq(
				optional($.visibility),
				"use",
				field("path", $._type_path),
				optional(seq("as", field("alias", $.identifier))),
				";",
			),

		enum_path: ($) => seq($.identifier, "::", $.identifier),

		generic_parameters: ($) => seq("<", sep1($.identifier, ","), ">"),

		generic_arguments: ($) => seq("<", sep1($._type, ","), ">"),

		type_definition: ($) =>
			seq(
				optional($.visibility),
				"type",
				field("name", $.identifier),
				optional($.generic_parameters),
				optional($.type_conformance_list),
				field("body", $.field_body),
			),

		field_body: ($) => seq("{", optional($.field_list), "}"),

		field_list: ($) => sep1($.field_with_docs, ",", true),

		field_with_docs: ($) => seq(optional($.doc_comment), $._field),

		_field: ($) => choice($.value_field, $.event_field, $.inject_field),

		value_field: ($) =>
			seq(
				optional($.visibility),
				field("type", $._type),
				field("name", $.identifier),
			),

		enum_definition: ($) =>
			seq(
				optional($.visibility),
				"enum",
				field("name", $.identifier),
				optional($.generic_parameters),
				field("body", $.enum_body),
			),

		enum_body: ($) => seq("{", optional($.enum_variant_list), "}"),

		enum_variant_list: ($) => sep1($.enum_variant_with_docs, ",", true),

		enum_variant_with_docs: ($) => seq(optional($.doc_comment), $.enum_variant),

		enum_variant: ($) =>
			seq(
				field("name", $.identifier),
				optional(seq("(", optional($.field_list), ")")),
			),

		function_definition: ($) =>
			seq(
				optional($.attribute_list),
				optional($.visibility),
				field("return_type", $._type),
				field("name", $.identifier),
				optional($.generic_parameters),
				"(",
				optional($.parameter_list),
				")",
				field("body", $.block),
			),

		parameter_list: ($) => sep1($.parameter_with_docs, ","),

		parameter_with_docs: ($) => seq(optional($.doc_comment), $._parameter),

		_parameter: ($) =>
			seq(
				optional(prec(2, $.parameter_modifier)),
				field("type", $._type),
				optional("mut"),
				field("name", $.identifier),
			),

		block: ($) => seq("{", repeat($._statement), "}"),

		_statement: ($) =>
			choice(
				$.let_statement,
				$.return_statement,
				$.break_statement,
				$.continue_statement,
				$.while_statement,
				$.for_statement,
				$.if_statement,
				$.with_statement,
				$.launch_statement,
				$.expression_statement,
			),

		let_statement: ($) => choice($.typed_let_statement, $.inferred_let_statement),

		typed_let_statement: ($) =>
			seq(
				field("type", $._type),
				optional("mut"),
				field("name", $.identifier),
				"=",
				field("value", $._expression),
				";",
			),

		return_statement: ($) => seq("return", optional($._expression), ";"),

		if_statement: ($) =>
			seq(
				"if",
				field("condition", $._expression),
				field("consequence", $.block),
				optional(seq("else", field("alternative", $.block))),
			),

		for_statement: ($) =>
			seq(
				"for",
				field("name", $.identifier),
				"in",
				field("iterator", $._expression),
				field("body", $.block),
			),

		expression_statement: ($) => seq($._expression, ";"),

		range_expression: ($) =>
			seq(
				"range",
				"(",
				field("start", $._expression),
				",",
				field("end", $._expression),
				")",
			),

		field_value_list: ($) => sep1($.field_value, ",", true),

		field_value: ($) =>
			seq(field("name", $.identifier), ":", field("value", $._expression)),

		argument_list: ($) => sep1($._expression, ","),

		match_expression: ($) =>
			seq(
				"match",
				field("value", $._expression),
				"{",
				optional(seq(sep1($.match_arm, ","), optional(","))),
				"}",
			),

		match_arm: ($) =>
			seq(
				field("pattern", $._pattern),
				optional(seq("when", field("guard", $._expression))),
				"=>",
				field("body", $._expression),
			),

		_pattern: ($) =>
			choice($.wildcard_pattern, $.enum_pattern, $.identifier, $.literal),

		enum_pattern: ($) =>
			seq(
				field("path", $.enum_path),
				optional(seq("(", optional($.pattern_list), ")")),
			),

		pattern_list: ($) => sep1($._pattern, ","),

		literal: ($) =>
			choice(
				$.integer_literal,
				$.float_literal,
				$.string_literal,
				$.char_literal,
				"true",
				"false",
			),

		integer_literal: (_) => token(seq(optional("-"), /\d+/)),

		string_literal: ($) =>
			seq(
				'"',
				repeat(choice($.string_interpolation, $.string_escape, $.string_content)),
				'"',
			),

		string_content: (_) => token(prec(-1, repeat1(choice(/[^"\\$]+/, /\$[^{]/)))),
