test/corpus/contracts.txt
==================
Example: Contracts
==================

unit main() {
    Console.Out.WriteLine("Storage contract example");
    return;
}

---

(source_file
  (item_with_docs
    (function_definition
      (primitive_type)
      (identifier)
      (block
        (expression_statement
          (assignment_expression
            (logical_or_expression
              (logical_and_expression
                (equality_expression
                  (comparison_expression
                    (additive_expression
                      (multiplication_expression
                        (unary_expression
                          (postfix_expression
                            (primary_expression
                              (identifier))
                            (member_access
                              (identifier))
                            (member_access
                              (identifier))
                            (call_suffix
                              (argument_list
                                (assignment_expression
                                  (logical_or_expression
                                    (logical_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (additive_expression
                                            (multiplication_expression
                                              (unary_expression
                                                (postfix_expression
                                                  (primary_expression
                                                    (literal
                                                      (string_literal
                                                        (string_content)))))))))))))))))))))))))
        (return_statement)))))
