test/corpus/types.txt
==================
Example: Types
==================

type User {
    i32 id,
    string name,
}

type Point {
    i32 x,
    i32 y,
}

enum Option<T> {
    Some(T value),
    None,
}

User make_user(i32 id, string name) {
    return User { id: id, name: name };
}

unit main(){
    User user = make_user(1, "John");
    std.io.println("User:");
    std.io.println(user.name);
}

---

(source_file
  (item_with_docs
    (type_definition
      (identifier)
      (field_body
        (field_list
          (field_with_docs
            (value_field
              (primitive_type)
              (identifier)))
          (field_with_docs
            (value_field
              (primitive_type)
              (identifier)))))))
  (item_with_docs
    (type_definition
      (identifier)
      (field_body
        (field_list
          (field_with_docs
            (value_field
              (primitive_type)
              (identifier)))
          (field_with_docs
            (value_field
              (primitive_type)
              (identifier)))))))
  (item_with_docs
    (enum_definition
      (identifier)
      (generic_parameters
        (identifier))
      (enum_body
        (enum_variant_list
          (enum_variant_with_docs
            (enum_variant
              (identifier)
              (field_list
                (field_with_docs
                  (value_field
                    (type_path
                      (identifier))
                    (identifier))))))
          (enum_variant_with_docs
            (enum_variant
              (identifier)))))))
  (item_with_docs
    (function_definition
      (type_path
        (identifier))
      (identifier)
      (parameter_list
        (parameter_with_docs
          (primitive_type)
          (identifier))
        (parameter_with_docs
          (primitive_type)
          (identifier)))
      (block
        (return_statement
          (assignment_expression
            (logical_or_expression
              (logical_and_expression
                (equality_expression
                  (comparison_expression
                    (additive_expression
                      (multiplication_expression
                        (unary_expression
                          (postfix_expression
                            (primary_expression
                              (struct_literal_expression
                                (identifier)
                                (field_value_list
                                  (field_value
                                    (identifier)
                                    (assignment_expression
                                      (logical_or_expression
                                        (logical_and_expression
                                          (equality_expression
                                            (comparison_expression
                                              (additive_expression
                                                (multiplication_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (primary_expression
                                                        (identifier))))))))))))
                                  (field_value
                                    (identifier)
                                    (assignment_expression
                                      (logical_or_expression
                                        (logical_and_expression
                                          (equality_expression
                                            (comparison_expression
                                              (additive_expression
                                                (multiplication_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (primary_expression
                                                        (identifier))))))))))))))))))))))))))))
  (item_with_docs
    (function_definition
      (primitive_type)
      (identifier)
      (block
        (let_statement
          (typed_let_statement
            (type_path
              (identifier))
            (identifier)
            (assignment_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (additive_expression
                        (multiplication_expression
                          (unary_expression
                            (postfix_expression
                              (primary_expression
                                (identifier))
                              (call_suffix
                                (argument_list
                                  (assignment_expression
                                    (logical_or_expression
                                      (logical_and_expression
                                        (equality_expression
                                          (comparison_expression
                                            (additive_expression
                                              (multiplication_expression
                                                (unary_expression
                                                  (postfix_expression
                                                    (primary_expression
                                                      (literal
                                                        (integer_literal))))))))))))
                                  (assignment_expression
                                    (logical_or_expression
                                      (logical_and_expression
                                        (equality_expression
                                          (comparison_expression
                                            (additive_expression
                                              (multiplication_expression
                                                (unary_expression
                                                  (postfix_expression
                                                    (primary_expression
                                                      (literal
                                                        (string_literal
                                                          (string_content))))))))))))))))))))))))))
        (expression_statement
          (assignment_expression
            (logical_or_expression
              (logical_and_expression
                (equality_expression
                  (comparison_expression
                    (additive_expression
                      (multiplication_expression
                        (unary_expression
                          (postfix_expression
                            (primary_expression
                              (identifier))
                            (member_access
                              (identifier))
                            (member_access
                              (identifier))
                            (call_suffix
                              (argument_list
                                (assignment_expression
                                  (logical_or_expression
                                    (logical_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (additive_expression
                                            (multiplication_expression
                                              (unary_expression
                                                (postfix_expression
                                                  (primary_expression
                                                    (literal
                                                      (string_literal
                                                        (string_content)))))))))))))))))))))))))
        (expression_statement
          (assignment_expression
            (logical_or_expression
              (logical_and_expression
                (equality_expression
                  (comparison_expression
                    (additive_expression
                      (multiplication_expression
                        (unary_expression
                          (postfix_expression
                            (primary_expression
                              (identifier))
                            (member_access
                              (identifier))
                            (member_access
                              (identifier))
                            (call_suffix
                              (argument_list
                                (assignment_expression
                                  (logical_or_expression
                                    (logical_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (additive_expression
                                            (multiplication_expression
                                              (unary_expression
                                                (postfix_expression
                                                  (primary_expression
                                                    (identifier))
                                                  (member_access
                                                    (identifier)))))))))))))))))))))))))))
